--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -89,8 +89,10 @@ jobs:
           ls -la /home/runner
           echo ".m2"
           ls -la /home/runner/.m2
+          echo "repository"
+          ls -la /home/runner/.m2/repository || echo FAIL
           echo "mkdir"
-          mkdir /home/runner/.m2/repository
+          mkdir -p /home/runner/.m2/repository
           ls -la /home/runner/.m2
           
      
