--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -62,6 +62,12 @@ jobs:
       - name: build
         run: ./gradlew ${{ env.GRADLE_SWITCHES }} build
 
+      - name: slackNotificationOfFailure:
+        if: failure()
+        uses: rtCamp/action-slack-notify@v2.3.3
+          env:
+            SLACK_WEBHOOK: ${{ secrets.OPS_GITHUB_ACTIONS_WEBHOOK }}
+
       - name: publish-snapshots
         if: >
           inputs.publish_snapshots &&
