Send notification on CI failures to our internal Slack (#65)
* action-slack-notify

* no colon

* no indent

* OPS_GITHUB_ACTIONS_WEBHOOK as secret

* Pin exact commit of action-slack-notify

* more Slack customization

* project name

* concise output

* no SLACK_MESSAGE

* Add conditions for notifications

--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -32,6 +32,8 @@ on:
         required: false
       ossrh_signing_password:
         required: false
+      OPS_GITHUB_ACTIONS_WEBHOOK:
+        required: true
 
 env:
   GRADLE_SWITCHES: --console=plain --info --stacktrace --warning-mode=all --no-daemon
@@ -61,6 +63,16 @@ jobs:
 
       - name: build
         run: ./gradlew ${{ env.GRADLE_SWITCHES }} build
+
+      - name: slackNotificationOfFailure
+        if: failure() && github.event_name == 'schedule' && (github.repository_owner == 'openrewrite' || github.repository_owner == 'moderneinc')
+        uses: rtCamp/action-slack-notify@e31e87e03dd19038e411e38ae27cbad084a90661
+        env:
+          SLACK_WEBHOOK: ${{ secrets.OPS_GITHUB_ACTIONS_WEBHOOK }}
+          MSG_MINIMAL: actions url
+          SLACK_USERNAME: ${{ github.event.repository.name }} CI failure
+          SLACK_COLOR: failure
+          SLACK_FOOTER: ''
 
       - name: publish-snapshots
         if: >
