--- a/.github/workflows/publish-gradle.yml
+++ b/.github/workflows/publish-gradle.yml
@@ -15,6 +15,8 @@ on:
         required: true
       ossrh_signing_password:
         required: true
+      node_auth_token:
+        required: false
 
 env:
   GRADLE_SWITCHES: --console=plain --info --stacktrace --warning-mode=all --no-daemon
@@ -22,6 +24,7 @@ env:
   ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.ossrh_token }}
   ORG_GRADLE_PROJECT_signingKey: ${{ secrets.ossrh_signing_key }}
   ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.ossrh_signing_password }}
+  NODE_AUTH_TOKEN: ${{ secrets.node_auth_token }}
 
 jobs:
   release:
@@ -35,6 +38,10 @@ jobs:
         with:
           distribution: temurin
           java-version: 21
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
