--- a/.github/workflows/publish-gradle.yml
+++ b/.github/workflows/publish-gradle.yml
@@ -24,7 +24,7 @@ env:
   ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.ossrh_token }}
   ORG_GRADLE_PROJECT_signingKey: ${{ secrets.ossrh_signing_key }}
   ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.ossrh_signing_password }}
-  NODE_AUTH_TOKEN: ${{ secrets.node_auth_token }}
+  ORG_GRADLE_PROJECT_nodeAuthToken: ${{ secrets.node_auth_token }}
 
 jobs:
   release:
@@ -38,10 +38,6 @@ jobs:
         with:
           distribution: temurin
           java-version: 21
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '20.x'
-          registry-url: 'https://registry.npmjs.org'
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
