--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -28,6 +28,8 @@ on:
         required: false
       OPS_GITHUB_ACTIONS_WEBHOOK:
         required: false
+      node_auth_token:
+        required: false
 
 env:
   GRADLE_SWITCHES: --console=plain --info --stacktrace --warning-mode=all --no-daemon
@@ -80,3 +82,4 @@ jobs:
           ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.ossrh_token }}
           ORG_GRADLE_PROJECT_signingKey: ${{ secrets.ossrh_signing_key }}
           ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.ossrh_signing_password }}
+          ORG_GRADLE_PROJECT_nodeAuthToken: ${{ secrets.node_auth_token }}
