--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -13,3 +13,4 @@ jobs:
           stale-pr-message: 'This PR is stale because it has been open for 90 days with no activity. Remove stale label or comment or this will be closed in 7 days.'
           days-before-stale: -1 # Do not close issues
           days-before-pr-stale: 90
+          operations-per-run: 100
