--- a/.github/workflows/receive-pr.yml
+++ b/.github/workflows/receive-pr.yml
@@ -4,6 +4,11 @@ name: receive-pr
 on:
   workflow_call:
     inputs:
+      java_version:
+        description: Java version for setup-java
+        type: string
+        required: false
+        default: 21
       recipe:
         description: The OpenRewrite recipe to apply to the PR
         type: string
@@ -68,7 +73,7 @@ jobs:
       - uses: actions/setup-java@v5
         with:
           distribution: temurin
-          java-version: '21'
+          java-version: ${{ inputs.java_version }}
 
       # Capture the PR number
       - name: Create pr_number.txt
