--- a/.github/workflows/receive-pr.yml
+++ b/.github/workflows/receive-pr.yml
@@ -8,7 +8,9 @@ on:
         description: Java version for setup-java
         type: string
         required: false
-        default: 25
+        default: |
+          21
+          25
       recipe:
         description: The OpenRewrite recipe to apply to the PR
         type: string
