--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -8,9 +8,7 @@ on:
         description: Java version for setup-java
         type: string
         required: false
-        default: |
-          25
-          21
+        default: 21
       publish_snapshots:
         description: Whether to attempt publishing snapshots. When false, the workflow will only run build.
         type: boolean
