--- a/.github/workflows/publish-gradle.yml
+++ b/.github/workflows/publish-gradle.yml
@@ -8,9 +8,7 @@ on:
         description: Java version for setup-java
         type: string
         required: false
-        default: |
-          25
-          21
+        default: 21
     secrets:
       gradle_enterprise_access_key:
         description: Value of the Gradle Enterprise access token to use.
