--- a/.github/workflows/comment-pr-runner.yml
+++ b/.github/workflows/comment-pr-runner.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           rm -rf dist/
 
-      - uses: googleapis/code-suggester@v5
+      - uses: moderneinc/googleapis-code-suggester@main
         with:
           command: review
           pull_number: ${{ env.PR_NUMBER }}
