Clarify mod.jar usage in workflow comments
Updated comments to clarify usage of mod.jar for multi-tenant and private repos.

--- a/.github/workflows/receive-pr-runner.yml
+++ b/.github/workflows/receive-pr-runner.yml
@@ -49,7 +49,8 @@ jobs:
           curl -s --request GET --url "https://repo1.maven.org/maven2/io/moderne/moderne-cli/${LATEST_VERSION}/moderne-cli-${LATEST_VERSION}.jar" --output mod.jar
 
       # Execute best practices recipe
-      # add `java -jar mod.jar config license edit ${{ vars.license_key }}` and the appropriate variable when running against private repos
+      # If you have your own tenant add `java -jar mod.jar  config moderne edit <tenant url> --token <token>`. The token can be gathered by going to `/settings/access-token` in your tenant. This is a secret so treat is as such!
+      # If you are multi-tenant or CLI only add `java -jar mod.jar config license edit <license key>` and the appropriate variable when running against private repos
       - name: Build and run recipe
         run: |
           java -jar mod.jar config recipes artifacts artifactory edit ${{ inputs.artifactory_url }}
