Add uv setup to CI workflows
Python dependency management recipes in rewrite-python require
uv to be available for lock file resolution during tests.

--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -53,6 +53,9 @@ jobs:
           java-version: ${{ inputs.java_version }}
 
       ########################
+      - uses: astral-sh/setup-uv@v7
+
+      ########################
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v5
         with:
