--- a/.github/workflows/publish-gradle.yml
+++ b/.github/workflows/publish-gradle.yml
@@ -49,6 +49,8 @@ jobs:
           distribution: temurin
           java-version: ${{ inputs.java_version }}
 
+      - uses: astral-sh/setup-uv@v7
+
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v5
         with:
